<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    android:elevation="4dp"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/cardbg"
        >

        <TextView
            android:id="@+id/displayname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#442288"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displaysource"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/source"
            android:textColor="#6CA2EA"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/displaydestination"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/destination"
            android:textColor="#B5D33D"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/displaydate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/date"
            android:textColor="#FED23F"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/displayemail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/user_contact"
            android:textColor="#EB7D5B"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>